--- a/package.json
+++ b/package.json
@@ -1,26 +1,15 @@
 {
-  "name": "vithavar.github.io",
-  "version": "1.0.0",
-  "description": "Personal Website",
-  "main": "index.js",
+  "name": "vithavar",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/vithavar/vithavar.github.io.git"
-  },
-  "author": "Vithusan Thavarajah",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/vithavar/vithavar.github.io/issues"
-  },
-  "homepage": "https://github.com/vithavar/vithavar.github.io#readme",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "nodemon": "^2.0.2"
+    "next": "10.1.3",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   }
 }
