--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-images": "^1.7.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.32.11"
+    "sass": "^1.32.11",
+    "typed.js": "^2.0.12"
   }
 }
